# yield

./: .gitignore  README.md
backend/: .gitignore  .mise.toml  README.md  main.py  pyproject.toml  requirements.txt
backend/src/api/: deps.py
backend/src/api/routes/: chat.py  files.py  memories.py  notifications.py  search.py
backend/src/core/: __init__.py  config.py  logging.py
backend/src/db/: __init__.py  client.py
backend/src/services/: __init__.py  ai_service.py  file_ingestion.py  memory_processor.py  scheduler_service.py  tools.py
backend/tests/: test_routes.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/chat/: page.tsx
frontend/app/(dashboard)/files/: page.tsx
frontend/app/(dashboard)/inbox/: page.tsx
frontend/app/(dashboard)/memory/: page.tsx
frontend/app/(dashboard)/profile/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: chat-interface.tsx  file-uploads.tsx  header.tsx  memory-bank.tsx  profile-settings.tsx  sidebar.tsx  smart-inbox.tsx
frontend/components/auth/: protected-route.tsx
frontend/components/providers/: auth-provider.tsx  redux-provider.tsx
frontend/components/ui/: chart.tsx
frontend/lib/: config.ts  supabase.ts
frontend/lib/api/: client.ts  endpoints.ts  streaming.ts  types.ts
frontend/lib/store/: hooks.ts  index.ts  types.ts
frontend/lib/store/slices/: authSlice.ts  chatSlice.ts  filesSlice.ts  inboxSlice.ts  memorySlice.ts  uiSlice.ts
frontend/lib/utils/: errorHandler.ts
